<resources>
    <string name="app_name">UPAXTecnica</string>
    <string name="title_profile">Profile</string>
    <string name="title_movies">Movies</string>
    <string name="title_map">Map</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_error">Error</string>
    <string name="title_ok">OK</string>
    <string name="txt_name">Name</string>
    <string name="txt_profile">Information Profile</string>
    <string name="txt_overview">Overviews</string>
    <string name="img_image_profile">Image of User</string>
    <string name="img_gallery_selected">Image Selected Gallery</string>
    <string name="img_movie">Image Movie</string>
    <string name="txt_popularity">Popularity</string>
    <string name="txt_select_image">Select an Image</string>
    <string name="channel_name">UPAXTechnique</string>
    <string name="channel_description">Notifications of UPAXTechnique </string>
    <string name="btn_upload_image">Upload Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="movies_array">
        <item>Popular</item>
        <item>Top_Rated</item>
        <item>Upcoming</item>
    </string-array>
</resources>