<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoprofile"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/txt_upload_your_photo"
        style="@style/titlesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/txt_select_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_upload_photo"
        android:layout_width="@dimen/img_gallery_width"
        android:layout_height="@dimen/img_gallery_height"
        android:contentDescription="@string/img_gallery_selected"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/btn_upload_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_upload_your_photo"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/select" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upload_photo"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:backgroundTint="@color/white"
        android:padding="@dimen/margin_large"
        android:text="@string/btn_upload_image"
        style="@style/buttonStyles"
        android:drawableEnd="@drawable/photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_upload_photo"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>