<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardCornerRadius="5dp"
    android:background="@color/black"
    android:layout_margin="5dp"
    android:layout_height="120dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="120dp">

        <ImageView
            android:id="@+id/ivMovie"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/img_movie"
            android:scaleType="fitXY"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_name_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_movies"
            style="@style/itemTitleStyle"
            app:layout_constraintBottom_toTopOf="@+id/txt_overview_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivMovie"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_overview_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_overview"
            style="@style/itemTextStyle"
            app:layout_constraintBottom_toTopOf="@+id/txt_rating_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivMovie"
            app:layout_constraintTop_toBottomOf="@+id/txt_name_movie" />

        <TextView
            android:id="@+id/txt_rating_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_movies"
            style="@style/itemTextStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivMovie"
            app:layout_constraintTop_toBottomOf="@+id/txt_overview_movie" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>