<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoprofile"
    tools:context=".ui.profile.ProfileFragment">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_large"
            android:layout_margin="@dimen/margin_large"
            app:cardCornerRadius="@dimen/corners_general"
            app:cardBackgroundColor="@color/violet"
            app:cardElevation="@dimen/card_elevation"
            >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txt_title_profile"
                            style="@style/titlesText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text="@string/txt_profile"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="@dimen/margin_large"
                            app:layout_constraintStart_toStartOf="parent" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/img_profile_pic"
                            android:layout_width="@dimen/img_prof_width"
                            android:layout_height="@dimen/img_prof_height"
                            android:src="@drawable/ic_user_pic"
                            app:civ_border_color="#99000000"
                            app:civ_border_width="2dp"
                            app:layout_constraintBottom_toTopOf="@+id/txt_name_profile"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.498"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txt_name_profile"
                            style="@style/whiteText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text="@string/txt_name"
                            app:layout_constraintBottom_toTopOf="@+id/txt_biography"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/img_profile_pic" />

                        <TextView
                            android:id="@+id/txt_biography"
                            style="@style/whiteText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="3"
                            android:text="@string/txt_overview"
                            app:layout_constraintBottom_toTopOf="@+id/txt_popularity"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txt_name_profile" />

                        <TextView
                            android:id="@+id/txt_popularity"
                            style="@style/whiteText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_popularity"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txt_biography"
                            app:layout_constraintVertical_bias="0.165" />
                </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>